# mobile-a1

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  Directory.Build.props  Properties.h  README.md  ai_declaration_android_tech_stack.md  count.sh  count.txt  fix_includes.py  generate_android_assets_manifest.py  imgui.ini  imgui.json  projectGuide.txt  results.xml  setup.bat  vcpkg.json
AssetCompiler/: AnimationFileStructure.h  AssetCompiler.cpp  AssetCompiler.h  CMakeLists.txt  CmdlineParser.h  CompileOptions.h  CompilerBase.cpp  CompilerBase.h  CompilerMath.h  CompilerTypes.h  DataStructs.h  FbxLoader.cpp  FbxLoader.h  FormatMapper.h  MaterialLoader.cpp  MaterialLoader.h  MeshCompiler.cpp  MeshCompiler.h  MeshCompilerData.h  MeshFileStructure.h  MeshLoader.cpp  MeshLoader.h  MeshProcessor.cpp  MeshProcessor.h  ProgressReporter.h  SceneCompiler.cpp  SceneCompiler.h  SceneLoader.cpp  SceneLoader.h  TextureCompiler.cpp  TextureCompiler.h  ThumbnailRenderer.cpp  ThumbnailRenderer.h
EngineScripting/: CMakeLists.txt  Debug.cs  GameManager.cs  GameObject.cs  Time.cs
MagicEngine/: CMakeLists.txt  Demo.cpp  Demo.h  FilepathConstants.cpp  FilepathConstants.h  GameSettings.cpp  GameSettings.h  im3d.cpp  pch.h
MagicEngine-core/: CMakeLists.txt  Demo.h  FilepathConstants.cpp  FilepathConstants.h  GameSettings.cpp  GameSettings.h  main.cpp  pch.h
MagicEngine-core/Components/: EntityReferenceHolder.cpp  EntityReferenceHolder.h  NameComponent.cpp  NameComponent.h
MagicEngine-core/ECS/: ECS.cpp  ECS.h  ECS.ipp  ECSInternal.cpp  ECSInternal.h  ECSInternal.ipp  ECSSysLayers.cpp  ECSSysLayers.h  EntityUID.cpp  EntityUID.h  IRegisteredComponent.cpp  IRegisteredComponent.h  TestRegister.cpp  TestRegister.h
MagicEngine-core/Editor/: AnimationsTab.cpp  AnimationsTab.h  AssetBrowser.cpp  AssetBrowser.h  AssetBrowserCategories.cpp  AssetBrowserCategories.h  BehaviourTreeImguiHelper.cpp  BehaviourTreeImguiHelper.h  BehaviourTreeWindow.cpp  Console.cpp  Console.h  Editor.cpp  Editor.h  EditorCameraBridge.h  EditorGizmoBridge.h  EditorGuiUtils.cpp  EditorGuiUtils.h  EditorHistory.cpp  EditorHistory.h  EditorTweenModule.cpp  EditorUtilResource.cpp  EditorUtilResource.h  FileBrowserTab.cpp  FileBrowserTab.h  GUICollection.h  GUICollection.ipp  Gizmo.cpp  Gizmo.h  Hierarchy.cpp  Hierarchy.h  IEditorComponent.cpp  IHiddenComponent.cpp  Import.cpp  Import.h  InputConfig.cpp  InputConfig.h  Inspector.cpp  Inspector.h  LayersMatrix.cpp  LayersMatrix.h  (+23 more)
MagicEngine-core/Engine/: Audio.cpp  Audio.h  ECS.h  Engine.cpp  Engine.h  EntityEvents.h  EntityLayers.cpp  EntityLayers.h  EntitySpawnEvents.cpp  EntitySpawnEvents.h  EntityStateMachine.cpp  EntityStateMachine.h  Input.cpp  Input.h  Input.ipp  NavMesh.cpp  NavMesh.h  NavMeshAgent.cpp  NavMeshAgent.h  PrefabManager.h  SceneManagement.cpp  SceneManagement.h  Serializer.cpp
MagicEngine-core/Game/: AudioListener.cpp  AudioListener.h  Character.cpp  Character.h  CheatCodes.cpp  CheatCodes.h  Delusion.cpp  Delusion.h  EnemyCharacter.cpp  EnemyCharacter.h  FlashComponent.cpp  FlashComponent.h  GameCameraController.cpp  GameCameraController.h  GameStateMachine.cpp  GameStateMachine.h  GameSystems.cpp  GameSystems.h  GrabbableItem.cpp  GrabbableItem.h  Health.cpp  Health.h  IGameComponentCallbacks.cpp  IGameComponentCallbacks.h  MaterialSwapper.cpp  MaterialSwapper.h  PlayerCharacter.cpp  PlayerCharacter.h  PrefabSpawner.cpp  PrefabSpawner.h  game.cpp  game.h
MagicEngine-core/GameUI/: UIScreenManager.cpp  UIScreenManager.h
MagicEngine-core/Graphics/: AnimationComponent.cpp  AnimationComponent.h  AnimatorSystem.cpp  AnimatorSystem.h  BoneAttachment.cpp  BoneAttachment.h  CameraComponent.h  CameraSystem.cpp  CameraSystem.h  CustomViewport.cpp  CustomViewport.h  GraphicsECSMesh.cpp  GraphicsECSMesh.h  LightComponent.cpp  LightComponent.h  LightingSystem.cpp  LightingSystem.h  Materials.cpp  Materials.h  PostProcessingComponent.cpp  PostProcessingComponent.h  RenderComponent.cpp  RenderComponent.h  Sprite.cpp  TextComponent.cpp  TextComponent.h  TextSystem.cpp  TextSystem.h  TrailComponent.cpp  TrailComponent.h  TrailSystem.cpp  TrailSystem.h
MagicEngine-core/LibraryHeaders/: ImguiHeader.h
MagicEngine-core/Managers/: AudioManager.cpp  AudioManager.h  Filesystem.cpp  Filesystem.h
MagicEngine-core/Physics/: Collision.cpp  Collision.h  JoltDebugRenderer.h  JoltPhysics.cpp  JoltPhysics.h  Physics.cpp  Physics.h
MagicEngine-core/Scripting/: CSScripting.cpp  CSScripting.h  HotReloader.cpp  LuaRegistration.cpp  LuaRegistration.h  LuaScripting.cpp  LuaScripting.h  LuaTypesECS.cpp  LuaTypesECS.h  ScriptComponent.cpp  ScriptComponent.h  ScriptManagement.cpp
MagicEngine-core/Tween/: Tween.h  Tween.ipp  TweenBase.cpp  TweenECS.cpp  TweenECS.h  TweenECS.ipp  TweenManager.cpp  TweenManager.h  TweenManager.ipp
MagicEngine-core/UI/: BarComponent.cpp  BarComponent.h  ButtonComponent.cpp  ButtonComponent.h  CanvasComponent.h  CircleComponent.cpp  CircleComponent.h  DelusionBarComponent.h  DelusionRankComponent.h  HealthBarComponent.h  IUIComponent.cpp  IUIComponent.h  RectTransform.cpp  RectTransform.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h  UI.cpp
MagicEngine-core/Utilities/: AndroidMacros.h  CrashHandler.cpp  GameTime.cpp  GameTime.h  History.cpp  Logging.cpp  MacroTemplates.h  MagicMath.h  MagicMath.ipp  MaskTemplate.h  Messaging.cpp  Messaging.ipp  ProcessRunner.cpp  ProcessRunner.h  RandUID.cpp  RandUID.h  (+11 more)
editor/: CMakeLists.txt  application.cpp  application.h  editor_viewport.cpp  editor_viewport.h  main_desktop.cpp  pch.h
engine/: 7percent.vcxproj.filters  AssetBrowser.cpp  CMakeLists.txt  Collision.cpp  Collision.h  Console.cpp  Demo.cpp  Demo.h  EditorGuiUtils.cpp  EditorGuiUtils.h  FileBrowserTab.h  GameSettings.cpp  GameSettings.h  GameSystems.cpp  Gizmo.h  MiscAssetTabs.cpp  PrefabManager.h  RenderComponent.cpp  RenderSystem.cpp  Serializer.h  Serializer.ipp  SpriteTab.cpp  main.cpp  pch.h
game/: CMakeLists.txt  application.cpp  application.h  main_desktop.cpp
ryEngine-core/: CMakeLists.txt
(+3468 files in other folders)
